@@ -51,7 +51,7 @@ SCIP_RETCODE SCIPpropagateCutoffboundVar(
    SCIP_VAR*             var,                /**< variables to propagate */
    SCIP_Real             cutoffbound,        /**< cutoff bound to use */
    SCIP_Real             pseudoobjval,       /**< pseudo objective value to use */
-   int*                  nchgbds             /**< pointer to store the number of changed bounds */
+   SCIP_Bool*            tightened           /**< pointer to if the domain was tightened */
    );
 
 #ifdef __cplusplus
